--- a/page5.html
+++ b/page5.html
@@ -7,6 +7,7 @@
  <link rel="stylesheet" type="text/css" href="main.css"> If you see this, you're awesome!
   <body>
     <center>
+	    <a href="index.html">HOME</a></br>
         <h1>Assignment 3 : Fusion 360 exercises.</h1>
         <p1> Fusion 360 exercises.
 	      fusion 360 is a platform that can be used for 3d printing. these models demonstrate simple commands on the platform - Such as:  sketching, extruding, lofting, duplicating, etc...</p1>
