--- a/page6.html
+++ b/page6.html
@@ -6,6 +6,7 @@
  <link rel="stylesheet" type="text/css" href="main.css"> 
   <body>
     <center>
+	    <a href="index.html">HOME</a></br>
 
  <h1>Assignment 4 : Signs </h1>
 	    <h1> Sign Ideas</h1>
