--- a/page7.html
+++ b/page7.html
@@ -6,6 +6,7 @@
  <link rel="stylesheet" type="text/css" href="main.css"> 
   <body>
     <center>
+	    <a href="index.html">HOME</a></br>
 <h1> Assignment 4 : Reading 3</h1>
         <p>Q1. From the podcast, how has our understanding of what dinoasaurs really look like evolved? Describe the progression of how we portrayed them and how might this effect our understanding of what Archeology is saying about them.</br>
           - 1. DINOSAURS ARE TOLD TO US AS MONSTERS AND VISUALLY TERRIFYING AND LRGER THAN LIFE. WE INTERPRET THESE CREATURES FROM WHAT WE HEAR AND SEE IN HISTORY AND THIS PODCAST BROUGHT AWARENESS TO ANOTHER POINT OF VIEW FOR VIEWING WHAT POSSIBLY COULD HAVE BEEN THE ACTUAL TRUTH.</br> 
