--- a/page8.html
+++ b/page8.html
@@ -6,6 +6,7 @@
  <link rel="stylesheet" type="text/css" href="main.css"> Learning for similar
   <body>
     <center>
+	    <a href="index.html">HOME</a></br>
 
     	<h1>ARTifact</h1>
 
