--- a/page9.html
+++ b/page9.html
@@ -6,6 +6,7 @@
     <title>(Yearning For Some Learning)</title>
  <link rel="stylesheet" type="text/css" href="main.css"> 
   <body>
+	  <a href="index.html">HOME</a></br>
    
 <h1> Reading No. 2. </h1>
 <p>
