--- a/page4.html
+++ b/page4.html
@@ -38,7 +38,8 @@
           <p>we decided to use wood for our material of fasterners and go through the laser cut process at san jose state art dept.  
           <img src="Schema_2.png" width="100%" height="100%">
               <img src="schema_part_1.png" width="100%" height="100%">
-            <p> above are the following instructions for the game we have createed tessealation pieces cut (below)
+            <p> above are the following instructions for the game we have createed tessealation pieces cut (below)</br></br>
+	  the peices were cut using SJSU's laser cutter. </br>All the peces fit and were able to fasten so we then proceded with the project through the paint nd video portion of this assignment. </p>
             <img src="cut2.jpg" width="100%" height="100%">
         <img src="cut.jpg" width="100%" height="100%">
         <img src="cut3.jpg" width="100%" height="100%">
